# idp-server/internal/application/oidc/types.go
@@ -1,6 +1,9 @@
 package oidc
 
-import "errors"
+import (
+	"errors"
+	"time"
+)
 
 var (
 	ErrInvalidAccessToken = errors.New("invalid access token")
@@ -20,18 +23,20 @@ type UserInfoOutput struct {
 }
 
 type DiscoveryDocument struct {
-	Issuer                           string   `json:"issuer"`
-	AuthorizationEndpoint            string   `json:"authorization_endpoint"`
-	TokenEndpoint                    string   `json:"token_endpoint"`
-	UserInfoEndpoint                 string   `json:"userinfo_endpoint"`
-	JWKSURI                          string   `json:"jwks_uri"`
-	ResponseTypesSupported           []string `json:"response_types_supported"`
-	SubjectTypesSupported            []string `json:"subject_types_supported"`
-	IDTokenSigningAlgValuesSupported []string `json:"id_token_signing_alg_values_supported"`
-	ScopesSupported                  []string `json:"scopes_supported"`
-	TokenEndpointAuthMethodsSupported []string `json:"token_endpoint_auth_methods_supported"`
-	GrantTypesSupported              []string `json:"grant_types_supported"`
-	CodeChallengeMethodsSupported    []string `json:"code_challenge_methods_supported"`
+	Issuer                                    string   `json:"issuer"`
+	AuthorizationEndpoint                     string   `json:"authorization_endpoint"`
+	TokenEndpoint                             string   `json:"token_endpoint"`
+	UserInfoEndpoint                          string   `json:"userinfo_endpoint"`
+	IntrospectionEndpoint                     string   `json:"introspection_endpoint,omitempty"`
+	JWKSURI                                   string   `json:"jwks_uri"`
+	ResponseTypesSupported                    []string `json:"response_types_supported"`
+	SubjectTypesSupported                     []string `json:"subject_types_supported"`
+	IDTokenSigningAlgValuesSupported          []string `json:"id_token_signing_alg_values_supported"`
+	ScopesSupported                           []string `json:"scopes_supported"`
+	TokenEndpointAuthMethodsSupported         []string `json:"token_endpoint_auth_methods_supported"`
+	IntrospectionEndpointAuthMethodsSupported []string `json:"introspection_endpoint_auth_methods_supported,omitempty"`
+	GrantTypesSupported                       []string `json:"grant_types_supported"`
+	CodeChallengeMethodsSupported             []string `json:"code_challenge_methods_supported"`
 }
 
 type JSONWebKeySet struct {
@@ -45,4 +50,24 @@ type JSONWebKey struct {
 	Alg string `json:"alg,omitempty"`
 	N   string `json:"n,omitempty"`
 	E   string `json:"e,omitempty"`
+}
+
+type IntrospectionInput struct {
+	AccessToken string
+}
+
+type IntrospectionOutput struct {
+	Active    bool      `json:"active"`
+	Scope     string    `json:"scope,omitempty"`
+	ClientID  string    `json:"client_id,omitempty"`
+	TokenType string    `json:"token_type,omitempty"`
+	Exp       int64     `json:"exp,omitempty"`
+	Iat       int64     `json:"iat,omitempty"`
+	Nbf       int64     `json:"nbf,omitempty"`
+	Sub       string    `json:"sub,omitempty"`
+	Aud       []string  `json:"aud,omitempty"`
+	Iss       string    `json:"iss,omitempty"`
+	Jti       string    `json:"jti,omitempty"`
+	Username  string    `json:"username,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
 }
